Added Class Library

--- a/LabbBlazor/Components/Pages/NewUser.razor
+++ b/LabbBlazor/Components/Pages/NewUser.razor
@@ -1,5 +1,6 @@
 ﻿@page "/newuser"
 @using Microsoft.AspNetCore.Components.Forms
+@using LabbClassLibrary
 @rendermode InteractiveServer
 
 <PageTitle>New User</PageTitle>
