--- a/LabbBlazor/Components/Pages/Users.razor
+++ b/LabbBlazor/Components/Pages/Users.razor
@@ -1,6 +1,6 @@
 ﻿@page "/users"
 @rendermode InteractiveServer
-
+@using LabbClassLibrary
 <PageTitle>Users</PageTitle>
 <style>
     tr:hover.user-tr {
