--- a/LabbBlazor/Components/Pages/Todos.razor
+++ b/LabbBlazor/Components/Pages/Todos.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Text.Json
 @using System.Net.Sockets
+@using LabbClassLibrary
 @rendermode InteractiveServer
 
 @if (_viewModel != null)
